# pm-angel

./: .env.example  .gitignore  Dockerfile  ReadMe.md  docker-compose.yml  pyproject.toml
exigences/: exigences.md
src/pm_angel/: config.py  database.py  main.py  models.py  schemas.py
src/pm_angel/api/: clob.py  data_api.py  gamma_api.py  openmeteo.py
src/pm_angel/services/: activity_log.py  activity_poller.py  decision_log.py  forecast_engine.py  risk_manager.py  trade_executor.py  trader_discovery.py  weather_bot.py  weather_parser.py
src/pm_angel/static/: style.css
src/pm_angel/templates/: analysis.html  base.html  dashboard.html  leaderboard.html  markets.html  settings.html  top_traders.html
src/pm_angel/templates/partials/: bets_table.html  detected_trades.html  log_entries.html  status_bar.html
